--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,24 @@
 [profile.default]
 src = "src"
-out = "out"
 libs = ["lib"]
+out = "out"
+test = "test"
+script = "script"
+fuzz = { runs = 1_000 }
+evm_version = "paris"
 
+[profile.ci]
+  fuzz = { runs = 10_000 }
+  verbosity = 4
+
+[fmt]
+  bracket_spacing = true
+  int_types = "long"
+  line_length = 200
+  multiline_func_header = "all"
+  number_underscore = "thousands"
+  quote_style = "double"
+  tab_width = 4
+  wrap_comments = true
+    
 # See more config options https://github.com/foundry-rs/foundry/tree/master/crates/config
