--- a/foundry.toml
+++ b/foundry.toml
@@ -20,5 +20,12 @@ evm_version = "paris"
   quote_style = "double"
   tab_width = 4
   wrap_comments = true
-    
+
+[rpc_endpoints]
+mumbai = "${MUMBAI_RPC_URL}"
+
+[etherscan]
+mumbai = { key = "${ETHERSCAN_API_KEY}" }
+
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/crates/config
